--- a/uptime-kuma/compose.yaml
+++ b/uptime-kuma/compose.yaml
@@ -4,7 +4,7 @@ services:
   uptime-kuma:
     image: louislam/uptime-kuma:1
     container_name: uptime-kuma
-    restart: always
+    restart: unless-stopped
     networks:
       - caddy
     volumes:
