--- a/caddy/compose.yaml
+++ b/caddy/compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   caddy:
     image: lucaslorentz/caddy-docker-proxy:ci-alpine
+    container_name: caddy
     ports:
       - 80:80
       - 443:443
