--- a/nextcloud/compose.yaml
+++ b/nextcloud/compose.yaml
@@ -5,6 +5,8 @@ services:
     image: nextcloud/all-in-one:latest
     restart: unless-stopped
     container_name: nextcloud-aio-mastercontainer
+    ports:
+      - "24500:8080"
     environment:
       - APACHE_PORT=11000
     volumes:
