--- a/caddy/compose.yaml
+++ b/caddy/compose.yaml
@@ -1,6 +1,8 @@
+name: caddy
+
 services:
   caddy:
-    image: lucaslorentz/caddy-docker-proxy:ci-alpine
+    image: lucaslorentz/caddy-docker-proxy:2.9-alpine
     container_name: caddy
     ports:
       - 80:80
@@ -11,7 +13,7 @@ services:
       - caddy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - caddy_data:/data
+      - data:/data
       - ./certs:/etc/ssl/certs/caddy:ro
       - ./private:/etc/ssl/private/caddy:ro
     restart: unless-stopped
@@ -21,5 +23,5 @@ networks:
     external: true
 
 volumes:
-  caddy_data:
-    name: caddy_data
+  data:
+    name: caddy-data
