Change: miniflux compose.yaml

--- a/miniflux/.env.template
+++ b/miniflux/.env.template
@@ -1,6 +1,6 @@
-ADMIN_USERNAME=user
-ADMIN_PASSWORD=password
-DOMAIN=rss.example.com
+ROOT_DOMAIN=example.com
+DOMAIN=rss.${ROOT_DOMAIN}
 
-POSTGRES_USER=miniflux
+ADMIN_USERNAME=username
+ADMIN_PASSWORD=password
 POSTGRES_PASSWORD=secret
