Change: miniflux compose to allow oidc

--- a/miniflux/.env.template
+++ b/miniflux/.env.template
@@ -4,3 +4,10 @@ DOMAIN=rss.${ROOT_DOMAIN}
 ADMIN_USERNAME=username
 ADMIN_PASSWORD=password
 POSTGRES_PASSWORD=secret
+
+OAUTH2_PROVIDER=oidc
+OAUTH2_CLIENT_ID=client_id
+OAUTH2_CLIENT_SECRET=client_secret
+OAUTH2_REDIRECT_URL=https://rss.example.com/oauth2/oidc/callback
+OAUTH2_OIDC_DISCOVERY_ENDPOINT=https://auth.example.com/application/o/rss/
+OAUTH2_USER_CREATION=1
