--- a/miniflux/compose.yaml
+++ b/miniflux/compose.yaml
@@ -19,6 +19,15 @@ services:
       - CREATE_ADMIN=1
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - OAUTH2_PROVIDER=${OAUTH2_PROVIDER}
+      - OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
+      - OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
+      - OAUTH2_REDIRECT_URL=${OAUTH2_REDIRECT_URL}
+      - OAUTH2_OIDC_DISCOVERY_ENDPOINT=${OAUTH2_OIDC_DISCOVERY_ENDPOINT}
+      - OAUTH2_USER_CREATION=1
+      - POLLING_FREQUENCY=15
+      - POLLING_PARSING_ERROR_LIMIT=5
+      - FORCE_REFRESH_INTERVAL=1
       - PORT:8080
   db:
     image: postgres:15
