Change: gotosocial compose to allow oidc

--- a/gotosocial/compose.yaml
+++ b/gotosocial/compose.yaml
@@ -17,7 +17,15 @@ services:
       GTS_LETSENCRYPT_ENABLED: "false"
       GTS_LETSENCRYPT_EMAIL_ADDRESS: ""
       GTS_LANDING_PAGE_USER: ${LANDING_PAGE_USER}
+      GTS_ACCOUNTS_REGISTRATION_OPEN: "false"
       GTS_ADVANCED_RATE_LIMIT_REQUESTS: 0
+      GTS_OIDC_ENABLED: ${GTS_OIDC_ENABLED}
+      GTS_OIDC_IDP_NAME: ${GTS_OIDC_IDP_NAME}
+      GTS_OIDC_ISSUER: ${GTS_OIDC_ISSUER}
+      GTS_OIDC_CLIENT_ID: ${GTS_OIDC_CLIENT_ID}
+      GTS_OIDC_CLIENT_SECRET: ${GTS_OIDC_CLIENT_SECRET}
+      GTS_OIDC_SCOPES: "openid, email, profile"
+      GTS_OIDC_LINK_EXISTING: false
       GTS_INSTANCE_LANGUAGES: "en,zh"
       GTS_STORAGE_BACKEND: ${STORAGE_BACKEND}
       GTS_STORAGE_S3_ENDPOINT: ${S3_ENDPOINT}
