--- a/gotosocial/.env.template
+++ b/gotosocial/.env.template
@@ -10,3 +10,9 @@ S3_BUCKET=social-asset
 S3_REDIRECT_URL=https://social-asset.${ROOT_DOMAIN}.com
 S3_ACCESS_KEY=access_key
 S3_SECRET_KEY=secret_key
+
+GTS_OIDC_ENABLED=true
+GTS_OIDC_IDP_NAME=Your Account
+GTS_OIDC_ISSUER=https://auth.${ROOT_DOMAIN}/application/o/social/
+GTS_OIDC_CLIENT_ID=client_id
+GTS_OIDC_CLIENT_SECRET=client_secret
