Add: OIDC provider name config in miniflux

--- a/miniflux/.env.template
+++ b/miniflux/.env.template
@@ -6,6 +6,7 @@ ADMIN_PASSWORD=password
 POSTGRES_PASSWORD=secret
 
 OAUTH2_PROVIDER=oidc
+OAUTH2_OIDC_PROVIDER_NAME=your account
 OAUTH2_CLIENT_ID=client_id
 OAUTH2_CLIENT_SECRET=client_secret
 OAUTH2_REDIRECT_URL=https://rss.example.com/oauth2/oidc/callback
