--- a/miniflux/compose.yaml
+++ b/miniflux/compose.yaml
@@ -20,6 +20,7 @@ services:
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - OAUTH2_PROVIDER=${OAUTH2_PROVIDER}
+      - OAUTH2_OIDC_PROVIDER_NAME=${OAUTH2_OIDC_PROVIDER_NAME}
       - OAUTH2_CLIENT_ID=${OAUTH2_CLIENT_ID}
       - OAUTH2_CLIENT_SECRET=${OAUTH2_CLIENT_SECRET}
       - OAUTH2_REDIRECT_URL=${OAUTH2_REDIRECT_URL}
