Add: miniflux BASE_URL environment variable

--- a/miniflux/compose.yaml
+++ b/miniflux/compose.yaml
@@ -14,6 +14,7 @@ services:
       db:
         condition: service_healthy
     environment:
+      - BASE_URL=https://${DOMAIN}
       - DATABASE_URL=postgres://miniflux:${POSTGRES_PASSWORD}@db/miniflux?sslmode=disable
       - RUN_MIGRATIONS=1
       - CREATE_ADMIN=1
